<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#1a202c"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff7260"
        android:padding="20dp"
        android:text="@string/quizSettingsTitle"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/groupQuizLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10sp"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/butQuizLevel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quizLevel1" />

                <RadioButton
                    android:id="@+id/butQuizLevel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quizLevel2" />

                <RadioButton
                    android:id="@+id/butQuizLevel3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quizLevel3" />

                <RadioButton
                    android:id="@+id/butQuizLevel4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quizLevel4" />

                <RadioButton
                    android:id="@+id/butQuizLevel5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quizLevel5" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkJazzPopMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:text="@string/labelJazzPopMode" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10sp"
                    android:text="@string/quizCount"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editQuizCount"
                    android:layout_width="60sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/checkPlayLimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10sp"
                    android:text="@string/replayCount" />

                <EditText
                    android:id="@+id/editPlayCount"
                    android:layout_width="60sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <Button
                android:id="@+id/butQuizSettingsOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/button_home_quiz"
                android:text="@string/ok" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>