<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.chordtrainer.FlashcardDetailFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/flashcard_title_label"
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:background="#ffffff"
            android:layout_marginBottom="10dp"
            android:text="@string/flashcard_title_label"
            android:textSize="27sp"
            android:textColor="#129793" />

        <ImageView
            android:id="@+id/flashcard_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:src="@drawable/ip1_0" />

        <!-- 
        <Button
            android:id="@+id/play_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_home_flashcards"
            android:text="@string/fc_play_button"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />
        -->
        
        <TextView
            android:id="@+id/flashcard_hear_label"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="#ffffff"
            android:text="@string/flashcard_hear_label"
            android:textColor="#000000" />
        
        <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginBottom="12dp"
        	android:orientation="horizontal" >
        	
		    <Button
	            android:id="@+id/play_broken_button"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.6"
	            android:layout_marginRight="2dp"
	            android:background="@drawable/button_home_quiz"
	            android:text="@string/fc_broken_button"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#ffffff" />
		    <Button
	            android:id="@+id/play_block_button"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.6"
	            android:layout_marginLeft="2dp"
	            android:background="@drawable/button_home_quiz"
	            android:text="@string/fc_block_button"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#ffffff" />
		    
		</LinearLayout>    

        <TextView
            android:id="@+id/flashcard_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/flashcard_details_label"
            android:textColor="#000000"
            style="?android:textAppearanceMedium" />
        <TextView
            android:id="@+id/flashcard_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="info"
            android:textColor="#000000"
            android:visibility="gone"
            style="?android:textAppearanceMedium" />
    </LinearLayout>

</FrameLayout>