<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_fragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/quiz_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context="com.chordtrainer.QuizFragment">

    <ScrollView
        android:id="@+id/scroll_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="3/10"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="15dp"
                android:text="@string/quiz_question"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/rg_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp" >

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="1"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="2"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="3"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />

                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="4"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
                
                <RadioButton
                    android:id="@+id/rb5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="5"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
                
                <RadioButton
                    android:id="@+id/rb6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="6"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
                
                <RadioButton
                    android:id="@+id/rb7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="7"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
                
                <RadioButton
                    android:id="@+id/rb8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
            </RadioGroup>

            <Button
                android:id="@+id/quiz_play_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_quiz_play"
                android:padding="10dp"
                android:text="@string/quiz_replay"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/quiz_submit_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_quiz_submit"
                android:padding="10dp"
                android:text="@string/quiz_submit_button"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>